BE-4, added timeline
