# storage/api-docs/api-docs.json
@@ -1300,6 +1300,173 @@
                 ]
             }
         },
+        "/api/timeline": {
+            "get": {
+                "tags": [
+                    "TimeLine"
+                ],
+                "summary": "Get related travels",
+                "operationId": "0b42b4462659ced88c1e3e5de2b539d8",
+                "parameters": [
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "description": "Select page",
+                        "required": false,
+                        "schema": {
+                            "type": "integer",
+                            "example": ""
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Travels returned successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "properties": {
+                                            "data": {
+                                                "type": "array",
+                                                "items": {
+                                                    "properties": {
+                                                        "travel": {
+                                                            "properties": {
+                                                                "id": {
+                                                                    "description": "ID of the travel",
+                                                                    "type": "integer",
+                                                                    "example": 1
+                                                                },
+                                                                "name": {
+                                                                    "description": "Name of the travel",
+                                                                    "type": "string",
+                                                                    "example": "Mountain Adventure"
+                                                                },
+                                                                "description": {
+                                                                    "description": "Description of the travel",
+                                                                    "type": "string",
+                                                                    "example": "A trip to explore the mountains"
+                                                                },
+                                                                "from": {
+                                                                    "description": "Start date of the travel",
+                                                                    "type": "string",
+                                                                    "format": "date",
+                                                                    "example": "2024-12-01"
+                                                                },
+                                                                "to": {
+                                                                    "description": "End date of the travel",
+                                                                    "type": "string",
+                                                                    "format": "date",
+                                                                    "example": "2024-12-10"
+                                                                },
+                                                                "longitude": {
+                                                                    "description": "Longitude of the location",
+                                                                    "type": "number",
+                                                                    "format": "float",
+                                                                    "example": 23.634501
+                                                                },
+                                                                "latitude": {
+                                                                    "description": "Latitude of the location",
+                                                                    "type": "number",
+                                                                    "format": "float",
+                                                                    "example": -102.552784
+                                                                },
+                                                                "favourite": {
+                                                                    "description": "Whether the travel is marked as favourite",
+                                                                    "type": "boolean",
+                                                                    "example": true
+                                                                },
+                                                                "created": {
+                                                                    "description": "Record creation",
+                                                                    "type": "string",
+                                                                    "example": "One minute ago"
+                                                                }
+                                                            },
+                                                            "type": "object"
+                                                        },
+                                                        "user": {
+                                                            "properties": {
+                                                                "id": {
+                                                                    "description": "ID of the user",
+                                                                    "type": "integer",
+                                                                    "example": 2
+                                                                },
+                                                                "email": {
+                                                                    "description": "Email of the user",
+                                                                    "type": "string",
+                                                                    "example": "user2@example.com"
+                                                                },
+                                                                "name": {
+                                                                    "description": "Name of the user",
+                                                                    "type": "string",
+                                                                    "example": "Jan"
+                                                                },
+                                                                "avatar": {
+                                                                    "description": "Avatar of the user",
+                                                                    "type": "string",
+                                                                    "example": null
+                                                                }
+                                                            },
+                                                            "type": "object"
+                                                        }
+                                                    },
+                                                    "type": "object"
+                                                }
+                                            },
+                                            "meta": {
+                                                "properties": {
+                                                    "current_page": {
+                                                        "type": "integer",
+                                                        "example": 1
+                                                    },
+                                                    "last_page": {
+                                                        "type": "integer",
+                                                        "example": 5
+                                                    },
+                                                    "per_page": {
+                                                        "type": "integer",
+                                                        "example": 10
+                                                    },
+                                                    "total": {
+                                                        "type": "integer",
+                                                        "example": 50
+                                                    }
+                                                },
+                                                "type": "object"
+                                            }
+                                        },
+                                        "type": "object"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Unauthenticated."
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            }
+        },
         "/api/travels/{travel}": {
             "get": {
                 "tags": [
@@ -2058,7 +2225,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Travel returned successfully",
+                        "description": "Travels returned successfully",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -2424,6 +2591,9 @@
         },
         {
             "name": "Profiles"
+        },
+        {
+            "name": "TimeLine"
         },
         {
             "name": "Travels"
